@@ -373,7 +373,7 @@ PackLinuxI386::buildLinuxLoader(
     addLoader("IDENTSTR", NULL);
     addLoader("LEXEC020", NULL);
     addLoader("FOLDEXEC", NULL);
-    if (ph.method == M_LZMA) {
+    if (M_IS_LZMA(ph.method)) {
         const lzma_compress_result_t *res = &ph.compress_result.result_lzma;
         acc_uint32e_t properties = // lc, lp, pb, dummy
             (res->lit_context_bits << 0) |
